--- a/htmlPages/styles/style.css
+++ b/htmlPages/styles/style.css
@@ -1,3 +1,10 @@
+#map { width: 600px; height: 400px; }
+.hide {
+    display: none;
+}
+.show{
+    display:block;
+}
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
