--- a/htmlPages/styles/style.css
+++ b/htmlPages/styles/style.css
@@ -1,8 +1,9 @@
 #map {
-     width: 60px;
-     height: 40px; 
+     width: 600px;
+     height: 400px; 
      margin-top: 20px;
      margin-right: 400px;
+     margin-bottom: 20px;
     }
 
 .hide {
