--- a/htmlPages/styles/admin.css
+++ b/htmlPages/styles/admin.css
@@ -1,4 +1,4 @@
-body {
+.admin-body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,7 +46,7 @@ body {
     font-size: 14px;
 }
 
-button {
+.admin-button {
     display: block;
     margin: 0 auto;
     padding: 10px 20px;
@@ -57,6 +57,6 @@ button {
     text-transform: uppercase;
 }
 
-button:hover {
+.admin-button:hover {
     background-color: #f0f0f0;
 }
