--- a/htmlPages/styles/style.css
+++ b/htmlPages/styles/style.css
@@ -1,8 +1,9 @@
 #map {
-     width: 600px;
-     height: 400px; 
+     width: 600px !important;
+     height: 400px !important; 
      margin-top: 20px;
      margin-right: 400px;
+     margin-left: 400px;
      margin-bottom: 20px;
     }
 
